фикс таймера в метчах
